<resources>
    <string name="app_name">CarRentalFrontend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="missing_resource">Missing Resource</string>
    <string name="explore">Explore</string>
    <string name="chat">Chat</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_car_brands">Manage Car Brands</string>
    <string name="manage_cars">Manage Cars</string>
</resources>