<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home_page"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/item_explore_page"
        android:icon="@drawable/ic_location_icon"
        android:title="@string/explore" />

    <item
        android:id="@+id/item_favourite_page"
        android:icon="@drawable/ic_favourite_icon"
        android:title="@string/favourite" />

    <item
        android:id="@+id/item_chat_page"
        android:icon="@drawable/ic_chat_icon"
        android:title="@string/chat" />

    <item
        android:id="@+id/item_profile_page"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/profile" />

</menu>